# CTT_GC

./: .gitignore  CMakeLists.txt  README.md  comp01.ctt  comp02.ctt  ctt_reader.cpp  ctt_reader.h  example.ctt  main.cpp
CTT/: Course.cpp  Course.h  Curricula.cpp  Curricula.h  Room.cpp  Room.h
Colour/: Colour.cpp  Colour.h  Palette.cpp  Palette.h
Graph/: Graph.cpp  Graph.h  Node.cpp  Node.h
Scheduler/: scheduler.cpp  scheduler.h
